--- a/templates/show_entries.html
+++ b/templates/show_entries.html
@@ -4,16 +4,35 @@
     <dl>
       <dt>Title:
       <dd><input type="text" size="30" name="title">
-      <dt>Text:
+      <dt>Category:
       <dd><textarea name="text" rows="5" cols="40"></textarea>
       <dd><input type="submit" value="Share">
     </dl>
   </form>
+
+    <label for="select_category">Choose a category: </label>
+  <select name="select_categories" id="categories">
+          {% for entry in entries %}
+            <option value="entry.text|safe">{{ entry.text|safe }}</option>
+          {% endfor %}
+  </select>
+
+
   <ul class="entries">
   {% for entry in entries %}
-    <li><h2>{{ entry.title }}</h2>{{ entry.text|safe }}</li>
+
+    <h2>{{ entry.title }}</h2>{{ entry.text|safe }} {{ entry.id }}
+
+    <form action="{{ url_for('delete_entry') }}" method="post" class="delete-entry">
+        <button value="delete" type="submit">Delete</button>
+        <input name="id" value="{{ entry.id }}" type=hidden>
+    </form>
+    <br>
   {% else %}
     <li><em>Unbelievable.  No entries here so far</em></li>
   {% endfor %}
   </ul>
+
+
+
 {% endblock %}
