--- a/templates/show_entries.html
+++ b/templates/show_entries.html
@@ -1,5 +1,13 @@
 {% extends "layout.html" %}
 {% block body %}
+
+<script>
+    function complete_checkbox(id) {
+        document.getElementById(id).submit()
+        return true;
+    }
+</script>
+
   <form action="{{ url_for('add_entry') }}" method="post" class="add-entry">
     <dl>
       <dt>Title:
@@ -10,8 +18,33 @@
     </dl>
   </form>
   <ul class="entries">
+
   {% for entry in entries %}
-    <li><h2>{{ entry.title }}</h2>{{ entry.text|safe }}</li>
+      <li><h2>
+        <form action="{{ url_for('new_complete') }}" method="post" id="new-complete-{{ entry.id }}">
+            <input name="id" value="{{ entry.id }}" type=hidden>
+            <input type="checkbox" name="complete" onclick="complete_checkbox('new-complete-{{ entry.id }}')" {% if entry.complete == 'complete' %}checked{% endif %}>
+        </form>
+
+
+          {{ entry.title }} </h2>
+          <h4>{{ entry.complete }}</h4>
+          {{ entry.text|safe }}
+
+
+        <form action="{{ url_for('new_redir') }}" method="get" class="new_redir">
+            <button value="update" type="submit">Update</button>
+            <input name="id" value="{{ entry.id }}" type="hidden">
+        </form>
+
+
+        <form action="{{ url_for('delete_entry') }}" method="post" class="delete-entry">
+            <button value="delete" type="submit">Delete</button>
+            <input name="id" value="{{ entry.id }}" type=hidden>
+        </form>
+      </li>
+      <br>
+
   {% else %}
     <li><em>Unbelievable.  No entries here so far</em></li>
   {% endfor %}
