--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,10 +1,12 @@
 <!doctype html>
 <title>Flaskr Plus</title>
-<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
-<div class="page">
-  <h1>Flaskr Plus</h1>
-  {% for message in get_flashed_messages() %}
-    <div class="flash">{{ message }}</div>
+<div style="margin-left: -60px">
+<!-- Latest compiled and minified CSS -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"><div class="page container">
+    <h1 class="mt-3">Flaskr Plus</h1>
+{% for message, category in get_flashed_messages(with_categories=True) %}
+      <input type="hidden" name="category" value="{{ category }}">
+    <div class="alert alert-{{ message }}" role="alert">{{ category }}</div>
   {% endfor %}
-  {% block body %}{% endblock %}
+    {% block body %}{% endblock %}
 </div>
