--- a/templates/show_entries.html
+++ b/templates/show_entries.html
@@ -1,9 +1,11 @@
 {% extends "layout.html" %}
 {% block body %}
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <style>
         .hidden {
             display: none;
+
         }
     </style>
     <script>
@@ -26,47 +28,109 @@
 
     </script>
 
-  <form action="{{ url_for('add_entry') }}" method="post" class="add-entry">
-    <dl>
-      <dt>Title:
-      <dd><input type="text" size="30" name="title">
-      <dt>Category:
-        <dd><input name="category" size="30" ></dd>
-        <dt>Text:
-      <dd><textarea name="text" rows="5" cols="40"></textarea>
-      <dd><input type="submit" value="Share">
-    </dl>
-  </form>
+ <form action="{{ url_for('add_entry') }}" method="post" class="add-entry">
+    <div class="mb-3">
+        <label for="title" class="form-label">Title:</label>
+        <input type="text" class="form-control" id="title" name="title">
+    </div>
+    <div class="mb-3">
+        <label for="category" class="form-label">Category:</label>
+        <input type="text" class="form-control" id="category" name="category">
+    </div>
+    <div class="mb-3">
+        <label for="text" class="form-label">Text:</label>
+        <textarea class="form-control" id="text" name="text" rows="5"></textarea>
+    </div>
+    <button style="margin-bottom: 10px" type="submit" class="btn btn-primary">Share</button>
+</form>
+
 
 
 
 <form action="{{ url_for('show_entries')}}" method="get" class="show-categories">
-  <label for="select_category">Choose a category: </label>
-
-  <select name="select_categories" id="categories" onchange="filter()">
-        <option value="all_categories" class="category_list">All Categories</option>
-        {% for entry in categories %}
-            <option value="{{entry.category }}">{{ entry.category }}</option>
-        {% endfor %}
-  </select>
+    <div class="row">
+        <div class="col-md-2">
+            <label for="select_category" class="form-label">Choose a category:</label>
+        </div>
+        <div class="col-md-4">
+            <select class="form-select" name="select_categories" id="categories" onchange="filter()">
+                <option value="all_categories" class="category_list">All Categories</option>
+                {% for entry in categories %}
+                    <option value="{{ entry.category }}">{{ entry.category }}</option>
+                {% endfor %}
+            </select>
+        </div>
+    </div>
 </form>
 
 
-  <ul class="entries">
-  {% for entry in entries %}
-    <li class="entry" data-category="{{ entry.category }}">
-        <h2>{{ entry.title }}</h2> <h4>{{ entry.category }}</h4> {{ entry.text|safe }}
+<div class="container ">
+<br>
+    <div class="row">
+        <div class="col-md-2">
+            <h5>Title</h5>
+        </div>
+        <div class="col-md-2">
+             <h5>Category</h5>
+        </div>
+        <div class="col-md-2">
+             <h5>Text</h5>
+        </div>
+         <div class="col-md-2">
+             <h5> </h5>
+         </div>
+        <div class="col-md-2">
+             <h5>Delete</h5>
+        </div>
+        <div class="col-md-2">
+             <h5>Update</h5>
+        </div>
+    </div>
+</div>
+<ul class="list-group entries">
+    <div class="row">
+        {% for entry in entries %}
+        <div class="col-md-12 mb-3">
+            <li class="list-group-item entry" data-category="{{ entry.category }}">
+                <div class="row">
+                    <div class="col-md-2">
+                        <h2>{{ entry.title }}</h2>
+                    </div>
+                    <div class="col-md-2">
+                        <h4>{{ entry.category }}</h4>
+                    </div>
+                    <div class="col-md-4">
+                        {{ entry.text|safe }}
+                    </div>
+                    <div class="col-md-2">
+                        <form action="{{ url_for('delete_entry') }}" method="post" class="delete-entry">
+                            <button class="btn btn-danger" value="delete" type="submit">Delete</button>
+                            <input type="hidden" name="id" value="{{ entry.id }}">
+                        </form>
+                    </div>
+                    <div class="col-md-2">
+                        <form action="{{ url_for('update_redir') }}" method="get">
+                            <input type="hidden" name="id" value="{{ entry.id }}">
+                            <button type="submit" class="btn btn-primary">Update</button>
+                        </form>
+                    </div>
+                </div>
+            </li>
+        </div>
+        {% else %}
+        <div class="col-md-12 mb-3">
+            <li class="list-group-item">
+                <em>Unbelievable. No entries here so far</em>
+            </li>
+        </div>
+        {% endfor %}
+    </div>
+</ul>
 
-    <form action="{{ url_for('delete_entry') }}" method="post" class="delete-entry">
-        <button value="delete" type="submit">Delete</button>
-        <input name="id" value="{{ entry.id }}" type=hidden>
-    </form>
-    </li>
-  {% else %}
-    <li><em>Unbelievable.  No entries here so far</em></li>
-  {% endfor %}
-  </ul>
 
 
 
 {% endblock %}
+
+
+
